Add connection to the OpenAI API

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@telegraf/session": "^2.0.0-beta.7",
     "mongodb": "^6.8.0",
+    "openai": "^4.55.7",
     "telegraf": "github:telegraf/telegraf",
     "telegram": "^2.23.10",
     "typescript": "^5.5.4"
