--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A bot project to search for specific messages using AI in user chats.",
   "main": "build/app.js",
   "scripts": {
-    "dev": "npm run clean & npm run build & node --env-file .env.local build/app",
+    "dev": "npm run clean && npm run build && npm run start",
+    "start": "node --env-file .env.local build/main",
     "build": "tsc --build",
     "clean": "tsc --build --clean"
   },
@@ -25,6 +26,8 @@
     ]
   },
   "dependencies": {
+    "@nestjs/common": "^10.4.4",
+    "@nestjs/core": "^10.4.4",
     "@telegraf/session": "^2.0.0-beta.7",
     "mongodb": "^6.8.0",
     "openai": "^4.55.7",
