--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "tsc --build --clean"
   },
   "devDependencies": {
+    "@types/markdown-escape": "^1.1.3",
     "@types/node": "^22.1.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
@@ -28,7 +29,9 @@
   "dependencies": {
     "@nestjs/common": "^10.4.4",
     "@nestjs/core": "^10.4.4",
+    "@nestjs/schedule": "^4.1.1",
     "@telegraf/session": "^2.0.0-beta.7",
+    "markdown-escape": "^2.0.0",
     "mongodb": "^6.8.0",
     "openai": "^4.55.7",
     "telegraf": "github:telegraf/telegraf",
